--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
       <meta charset="utf-8">
       <link rel="stylesheet" type="text/css" href="style.css">
       <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
-      <title>Sport Records Book</title>
+      <title>Battaglia Navale</title>
    </head>
    <body>
 
       <main>
-
+         <div id="points" class="counter">
+            POINTS <span id="scores">0</span>
+         </div>
          <div class="grid-container">
 
+         </div>
+         <div id="bombs" class="counter">
+            BOMBS <span id="fauls">0</span>
          </div>
 
       </main>
